# Library

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  TROUBLESHOOTING.md  check-access.sh  check-public-access.sh  check-volume.sh  docker-compose.yml  fix-502.sh  start.sh  sync-env.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  books.py  borrow_records.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  book.py  borrow_record.py  user.py
backend/app/repositories/: book_repository.py  borrow_repository.py  user_repository.py
backend/app/schemas/: book.py  borrow_record.py  user.py
backend/app/services/: auth_service.py  book_service.py  borrow_service.py  user_service.py
docs/: PUBLIC_ACCESS_TROUBLESHOOTING.md  SECURITY_AUDIT.md  SECURITY_CHECKLIST.md
frontend/: Dockerfile  nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: index.ts
frontend/src/components/: AppNavbar.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/types/: index.ts
frontend/src/views/: AdminBooksView.vue  AdminUsersView.vue  BookDetailView.vue  ChangePasswordView.vue  DashboardView.vue  LoginView.vue  MyBorrowsView.vue
